<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    android:orientation="vertical"
    style="@style/intentTheme"
    android:src="@drawable/ic_left_arrow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:background="@drawable/customer_border">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chx_everyTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/ediTxt_everyTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/everyTime"
                    android:layout_marginBottom="30dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from"
                    android:textSize="18dp"
                    android:layout_marginRight="25dp"/>

                <EditText
                    android:id="@+id/editTxt_from"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:background="@drawable/edittxt_round"
                    android:hint="@string/time"
                    android:textColorHint="@color/background_white"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="@color/background_white"
                    android:focusable="false"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to"
                    android:textSize="18dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"/>
                <EditText
                    android:id="@+id/editTxt_to"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:background="@drawable/edittxt_round"
                    android:hint="@string/time"
                    android:textColorHint="@color/background_white"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="@color/background_white"
                    android:focusable="false"/>

            </LinearLayout>

            </LinearLayout>
        <RelativeLayout
            android:id="@+id/container_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:background="@drawable/customer_border">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chx_everyGouv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/ediTxt_everyGouv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/everyGouver"
                    android:layout_marginBottom="30dp"/>

            </LinearLayout>
            <Button
                android:id="@+id/btn_chooseGouver"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:text="@string/chooseGouver"
                android:backgroundTint="@color/colorAccent"
                android:background="@drawable/edittxt_round"
                android:textColor="@color/background_white" />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:background="@drawable/customer_border">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chx_everyCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/ediTxt_everyCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/everyCity"
                    android:layout_marginBottom="30dp"/>

            </LinearLayout>
            <Button
                android:id="@+id/btn_chooseCity"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:text="@string/chooseCity"
                android:backgroundTint="@color/colorAccent"
                android:background="@drawable/edittxt_round"
                android:textColor="@color/background_white" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="36dp">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btn_savePerf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="end|bottom"
            android:layout_marginLeft="290dp"
            android:layout_marginEnd="38dp"
            android:layout_marginRight="38dp"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            app:fabSize="normal"
            app:srcCompat="@drawable/tick" />

    </RelativeLayout>

</LinearLayout>
